# app/Http/Controllers/Controller.php
@@ -8,7 +8,14 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Info(title="OfferMaker API", version="0.1")
+ * @OA\SecurityScheme(
+ *     securityScheme="bearerAuth",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT"
+ * )
  */
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, ValidatesRequests;
